Сделан слайдер + адаптив. Остался футер

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/swiper-bundle.min.css">
+	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/swiper.css">
 	<title>BOOSTEDusa</title>
-	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -215,12 +217,105 @@
 				<div class="accessories__title">
 					<h3>Looking for Accessories?</h3>
 				</div>
+				<!-- Slider main container -->
+				<div class="accessories__slider swiper">
+					<!-- Additional required wrapper -->
+					<div class="accessories__slider swiper-wrapper">
+						<!-- Slides -->
+						<!-- slide 1 -->
+						<div class="accessories__slider-item swiper-slide">
+							<img class="accessories__slider-image" src="/img/accessories/rev-tube.png" alt="rev-tube">
+							<a href="#" class="accessories__slider-item-name">
+								Rev Tube
+							</a>
+							<p class="accessories__slider-item-price">
+								$16.00 <span class="price-sale">$19.00</span>
+							</p>
+						</div>
+						<!-- slide 2 -->
+						<div class="accessories__slider-item swiper-slide">
+							<img class="accessories__slider-image" src="/img/accessories/boosted-rev-stem-catch.png"
+								alt="Boosted Rev Stem Catch">
+							<a href="#" class="accessories__slider-item-name">
+								Boosted Rev Stem Catch
+							</a>
+							<p class="accessories__slider-item-price">
+								$19.00 <span class="price-sale">$29.00</span>
+							</p>
+						</div>
+						<!-- slide 3 -->
+						<div class="accessories__slider-item swiper-slide">
+							<img class="accessories__slider-image" src="/img/accessories/stomp-brake-fender.png"
+								alt="Stomp Brake Fender">
+							<a href="#" class="accessories__slider-item-name">
+								Stomp Brake Fender
+							</a>
+							<p class="accessories__slider-item-price">
+								<span class="price-sold-out">Sold Out</span>
+							</p>
+						</div>
+						<!-- slide 4 -->
+						<div class="accessories__slider-item swiper-slide">
+							<img class="accessories__slider-image" src="/img/accessories/boosted-belt-kit.png"
+								alt="Boosted Belt Kit">
+							<a href="#" class="accessories__slider-item-name">
+								Boosted Belt Kit
+							</a>
+							<p class="accessories__slider-item-price">
+								$25.00 <span class="price-sale"></span>
+							</p>
+						</div>
+						<!-- slide 5 -->
+						<div class="accessories__slider-item swiper-slide">
+							<img class="accessories__slider-image" src="/img/accessories/bearing-service-kit.png"
+								alt="Bearing Service Kit">
+							<a href="#" class="accessories__slider-item-name">
+								Bearing Service Kit
+							</a>
+							<p class="accessories__slider-item-price">
+								$50.00 <span class="price-sale"></span>
+							</p>
+						</div>
+						<!-- slide 6 -->
+						<div class="accessories__slider-item swiper-slide">
+							<img class="accessories__slider-image" src="/img/accessories/boosted-pulley.png"
+								alt="Boosted Pulley / Belt Upgrade Kit">
+							<a href="#" class="accessories__slider-item-name">
+								Boosted Pulley / Belt Upgrade Kit
+							</a>
+							<p class="accessories__slider-item-price">
+								$75.00<span class="price-sale"></span>
+							</p>
+						</div>
+						<!-- slide 7 -->
+						<div class="accessories__slider-item swiper-slide">
+							<img class="accessories__slider-image" src="/img/accessories/boosted-skid-plates.png"
+								alt="Boosted Skid Plates">
+							<a href="#" class="accessories__slider-item-name">
+								Boosted Skid Plates
+							</a>
+							<p class="accessories__slider-item-price">
+								$20.00<span class="price-sale"></span>
+							</p>
+						</div>
+					</div>
+					<!-- If we need pagination
+					<div class="swiper-pagination"></div> -->
+
+					<!-- If we need navigation buttons -->
+					<div class="swiper-button-prev"></div>
+					<div class="swiper-button-next"></div>
+
+					<!-- If we need scrollbar
+					<div class="swiper-scrollbar"></div> -->
+				</div>
 			</section>
 		</main>
 		<footer class="footer">
 			Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, unde?
 		</footer>
 	</div>
+	<script src="js/swiper-bundle.min.js"></script>
 	<script src="js/script.js"></script>
 
 </body>
