--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 			</div>
 		</header>
 		<main>
+			<!-- Первый экран -->
 			<section class="hero hero-1">
 				<div class="hero__content container">
 					<div class="hero__text-container">
@@ -72,6 +73,7 @@
 					</div>
 				</div>
 			</section>
+			<!-- Партнёры -->
 			<div class="partners">
 				<div class="partners__content container">
 					<div class="partners__content-item">
@@ -96,6 +98,7 @@
 					</div>
 				</div>
 			</div>
+			<!-- Предложение 1 -->
 			<section class="offer container">
 				<div class="offer__header">
 					<h2 class="offer__title h2-title">
@@ -130,6 +133,7 @@
 					</div>
 				</div>
 			</section>
+			<!-- Второй полноэкранный блок -->
 			<section class="hero hero-2">
 				<div class="hero__content container">
 					<div class="hero__text-container">
@@ -148,6 +152,7 @@
 					</div>
 				</div>
 			</section>
+			<!-- Самокаты -->
 			<section class="revs-block container">
 				<div class="revs-block__image-1">
 					<img src="img/woman-on-rev.jpg" alt="woman-on-rev">
@@ -167,6 +172,7 @@
 					<button class="revs-block__btn btn-primary">Shop Now</button>
 				</div>
 			</section>
+			<!-- Предложение 2 -->
 			<section class="offer offer-2">
 				<div class="offer__header">
 					<div class="offer__cards">
@@ -199,6 +205,7 @@
 						</div>
 					</div>
 			</section>
+			<!-- Видео -->
 			<div class="video-container container">
 				<div class="video-content__item">
 					<iframe class="video-content__item-1" src="https://www.youtube.com/embed/78bXV1ZqQWI"
@@ -213,6 +220,7 @@
 						allowfullscreen></iframe>
 				</div>
 			</div>
+			<!-- Слайдер с аксессуарами -->
 			<section class="accessories">
 				<div class="accessories__title">
 					<h3>Looking for Accessories?</h3>
@@ -309,10 +317,151 @@
 					<!-- If we need scrollbar
 					<div class="swiper-scrollbar"></div> -->
 				</div>
+				<div class="accessories__decor">
+				</div>
 			</section>
+			<!-- Блок с преимуществами -->
+			<div class="advantages">
+				<div class="advantages__item">
+					<div class="advantages__item-image">
+						<img src="img/advantages/go-fast.png" alt="go fast">
+					</div>
+					<div class="advantages__item-label">
+						<h3>Go Fast</h3>
+					</div>
+					<p class="advantages__item-text">
+						Boosted is known for its premium performance boards offering a next-level experience.
+					</p>
+				</div>
+				<div class="advantages__item">
+					<div class="advantages__item-image">
+						<img src="img/advantages/go-far.png" alt="go far">
+					</div>
+					<div class="advantages__item-label">
+						<h3>Go Far</h3>
+					</div>
+					<p class="advantages__item-text">
+						With optional extended battery life, you can get wherever you need to go reliably.
+					</p>
+				</div>
+				<div class="advantages__item">
+					<div class="advantages__item-image">
+						<img src="img/advantages/go-safe.png" alt="go safe">
+					</div>
+					<div class="advantages__item-label">
+						<h3>Go Safe</h3>
+					</div>
+					<p class="advantages__item-text">
+						Safety is a #1 priority for Boosted, always wear a helmet when riding.
+					</p>
+				</div>
+				<div class="advantages__item">
+					<div class="advantages__item-image">
+						<img src="img/advantages/Built-to-Last.png" alt="Built-to-Last">
+					</div>
+					<div class="advantages__item-label">
+						<h3>Built to Last!</h3>
+					</div>
+					<p class="advantages__item-text">
+						Boosted products are engineered to last for years and are extremely reliable.
+					</p>
+				</div>
+			</div>
 		</main>
 		<footer class="footer">
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, unde?
+			<div class="footer__body container">
+				<div class="footer__body-logo">
+					<a href="#"><img src="img/logo-big.png" alt="boosted usa"></a>
+				</div>
+				<div class="footer__body-explore">
+					<h3 class="footer__body-explore-label">
+						Explore
+					</h3>
+					<ul class="footer__body-explore-list">
+						<li class="footer__body-explore-list-item">
+							<a href="#">Electric Skateboards</a>
+						</li>
+						<li class="footer__body-explore-list-item">
+							<a href="#">Electric Scooters</a>
+						</li>
+						<li class="footer__body-explore-list-item">
+							<a href="#">Accessories</a>
+						</li>
+						<li class="footer__body-explore-list-item">
+							<a href="#">FAQs</a>
+						</li>
+						<li class="footer__body-explore-list-item">
+							<a href="#">Warranty</a>
+						</li>
+						<li class="footer__body-explore-list-item">
+							<a href="">Quick Start Guide</a>
+						</li>
+						<li class="footer__body-explore-list-item">
+							<a href="#">Contact</a>
+						</li>
+						<li class="footer__body-explore-list-item">
+							<a href="#">Gift Card</a>
+						</li>
+						<li class="footer__body-explore-list-item">
+							<a href="#">Accessibility Statement</a>
+						</li>
+					</ul>
+				</div>
+				<div class="footer__body-about">
+					<h3 class="footer__body-about-label">
+						About Boosted USA
+					</h3>
+					<p class="footer__body-about-text">
+						Boosted empowers people everywhere to commute across their cities, campuses, and communities in ways
+						that were never before possible. Boosted is solving one of the biggest problems people face each day:
+						transportation.
+					</p>
+					<p class="footer__body-about-adress">
+						<span>CaliRides LLC - DBA Boosted USA</span>
+						<span>1281 Andersen Drive Ste. K</span>
+						<span>San Rafael, CA 94901</span>
+					</p>
+				</div>
+			</div>
+			<div class="footer-bottom-bg">
+				<div class="footer__bottom container">
+					<div class="footer__bottom-copyrights">
+						<p>© 2021
+							<a href="#"><span>Boosted USA</span></a> All Rights Reserved.
+						</p>
+						<p>
+							<a href="#"><span>Terms of Service</span></a>. Built by
+							<a href="#"><span>BH</span></a>
+						</p>
+					</div>
+					<div class="footer__bottom-icons">
+						<div class="footer__bottom-icons-item">
+							<img src="img/footer-icons/amex.png" alt="amex">
+						</div>
+						<div class="footer__bottom-icons-item">
+							<img src="img/footer-icons/2.png" alt="2">
+						</div>
+						<div class="footer__bottom-icons-item">
+							<img src="img/footer-icons/g-pay.png" alt="google pay">
+						</div>
+						<div class="footer__bottom-icons-item">
+							<img src="img/footer-icons/klarna.png" alt="klarma">
+						</div>
+						<div class="footer__bottom-icons-item">
+							<img src="img/footer-icons/mastercart.png" alt="mastercart">
+						</div>
+						<div class="footer__bottom-icons-item">
+							<img src="img/footer-icons/o-pay.png" alt="o-pay">
+						</div>
+						<div class="footer__bottom-icons-item">
+							<img src="img/footer-icons/v.png" alt="v">
+						</div>
+						<div class="footer__bottom-icons-item">
+							<img src="img/footer-icons/visa.png" alt="visa">
+						</div>
+					</div>
+				</div>
+			</div>
 		</footer>
 	</div>
 	<script src="js/swiper-bundle.min.js"></script>
